# research_ndt

./: .gitignore  eval_baseline.py  run_configs.sh
catkin_ws/src/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/config/: rviz_config.rviz
catkin_ws/src/include/pw_ndt_radar_scan_matching/: ellipse.cc  imu_yaw_lookup.h  ndt.h  ndt.hpp  pcl_visualization.h  pw_ndt.h  pw_ndt_search_step.hpp  pw_ndt_search_step_trim.hpp  pw_ndt_trim.h
catkin_ws/src/kitti_eval/devkit_for_oxford/: readme.txt
catkin_ws/src/kitti_eval/devkit_for_oxford/cpp/: evaluate_odometry  evaluate_odometry.cpp  mail.h
catkin_ws/src/kitti_eval/result_huber_70/: stats.txt
catkin_ws/src/kitti_eval/result_huber_70/errors/: 2019-01-10-14-02-34-radar-oxford-10k
catkin_ws/src/kitti_eval/result_huber_70/plot_error/: 00_ri.eps  00_rl.eps  00_rs.eps  00_ti.eps  00_tl.eps  00_tl.txt  00_ts.eps  01_ri.eps  01_rl.eps  01_rs.eps  01_ti.eps  01_tl.eps  01_ts.eps  02_ri.eps  02_rl.eps  02_rs.eps  02_ti.eps  02_tl.eps  02_ts.eps  03_ri.eps  03_rl.eps  03_rl.txt  03_rs.eps  03_ti.eps  03_tl.eps  03_ts.eps  04_ri.eps  04_ri.txt  04_rl.eps  04_rs.eps  04_ti.eps  04_tl.eps  04_ts.eps  05_ri.eps  05_rl.eps  05_rs.eps  05_ti.eps  05_ti.txt  05_tl.eps  05_ts.eps  (+37 more)
catkin_ws/src/kitti_eval/result_huber_70/plot_path/: 00.eps  00.gp  01.eps  01.gp  02.eps  02.gp  03.eps  03.gp  04.eps  04.gp  (+15 more)
catkin_ws/src/launch/: radar_odometry.launch
catkin_ws/src/poses/: 2019-01-14-12-05-52-radar-oxford-10k_gt.txt  2019-01-16-13-09-37-radar-oxford-10k_gt.txt
catkin_ws/src/script/: automation copy.py  automation.py  automation_grid.py  eval.py  oxford_gen_gt_file.py  radar_polar_to_cart_png.py
catkin_ws/src/src/: radar_scan_matching.cpp
(+1204 files in other folders)
